# Proyecto-Individual-1-MLOps

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Datasets/ArchivosPARQUET/: recomendacion_item.parquet  steam_games_limpio.parquet
Notebooks/: EDA.ipynb  ETL_Steam_Games.ipynb  ETL_User_reviews.ipynb  ETL_Users_Items.ipynb  Funciones.ipynb  ModeloMLOps.ipynb
