[project]
name = "proyecto-individual-mlops"
version = "2024.4.14"
description = "Henry!"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"

[tool.hatchling]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "proyecto-individual-mlops"
version = "2024.4.14"
description = "Henry!"
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "*"
gidgethub = { version = ">4.0.0", extras = ["httpx"] }
fastapi = "==0.110.1"
pandas = "==1.3.1"
uvicorn = "==0.29.0"
fastparquet = "==0.7.1"
nltk = "==3.6.5"
numpy = "1.21.5"
pyarrow = "==5.0.0"
scikit-learn = "==1.4.2"
sklearn = "==0.0.post12"
